src/objects/SFDC_Strategy__c.object
<CustomObject>
    <description>[Not currently used; may be revised or repurposed]
Specific set of strategies tied to each account that the sales manager needs to executive.  Each strategy lists specific revenue goals and products to be sold to a particular division or department.  Tasks and milestones are also attached to each strategy.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N60000001PRPGEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>Enter action(s) to attain goals</inlineHelpText>
        <label>Action</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the person who is responsible for this action. Hint: Enter first OR last name to search.</inlineHelpText>
        <label>Assigned to</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Enter first OR last name and click OK</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Account Actions</relationshipLabel>
        <relationshipName>Account_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Addressed__c</fullName>
        <label>Business Problem Addressed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Est_Comp_Date__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Product_Revenue__c</fullName>
        <label>Estimated Product Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Service_Revenue__c</fullName>
        <label>Estimated Service Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Revenue__c</fullName>
        <formula>Estimated_Product_Revenue__c  +  Estimated_Service_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N60000001PRP6EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to return</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Actions to Attain Goals</relationshipLabel>
        <relationshipName>R00N60000001PRPWEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Goal__c</fullName>
        <label>Solution / Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SFDC_Acct_Plan__c</columns>
        <columns>Action__c</columns>
        <columns>Strategy_Status__c</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>